--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           <img src="images/Attiq.png" alt="profile-pic"></div>
         <h2 class="title">Login</h2>
         <p class="sub-title">Please Login to Site.</p>
-        <form action="" class="form">
+        <form action="CSS - My Site/index.html" class="form">
             <div class="texts">
                 <input class="text" type="email" name="email" id="name" placeholder="Email">
                 <input class="text" type="password" name="password" id="password" placeholder="Password">
