--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <p class="sub-title">Please Login to Site.</p>
         <form action="CSS - My Site/index.html" class="form">
             <div class="texts">
-                <input class="text" type="email" name="email" id="name" placeholder="Email">
+                <input class="text" type="email" name="email" id="name" placeholder="Email" required>
                 <input class="text" type="password" name="password" id="password" placeholder="Password">
             </div>
             <button class="btn">Submit</button>
